--- a/gui/create_account.ui
+++ b/gui/create_account.ui
@@ -242,7 +242,7 @@ QPushButton:hover{background-color:rgba(107, 107, 107, 250);}</string>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="encrypt">
+      <widget class="QCheckBox" name="Key">
        <property name="font">
         <font>
          <family>Secular One</family>
@@ -253,23 +253,7 @@ QPushButton:hover{background-color:rgba(107, 107, 107, 250);}</string>
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
        <property name="text">
-        <string>Encrypt the account</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="key">
-       <property name="font">
-        <font>
-         <family>Secular One</family>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="text">
-        <string>create an account key</string>
+        <string>add an account key</string>
        </property>
       </widget>
      </item>
@@ -302,6 +286,25 @@ QPushButton:hover{background-color:rgba(107, 107, 107, 250);}</string>
        </property>
        <property name="text">
         <string>create the account</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="Error">
+       <property name="font">
+        <font>
+         <family>Secular One</family>
+         <pointsize>16</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color:red;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
