--- a/gui/login_page.ui
+++ b/gui/login_page.ui
@@ -16,7 +16,11 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Raisfeld encrypter</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../raisfeld-encrypter-website/static/icon.ico</normaloff>../raisfeld-encrypter-website/static/icon.ico</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">#centralwidget {background-color:rgba(20, 20, 20, 250);}
